--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Knowledge Timeline</title>
+    <title>Online Resume</title>
 </head>
 <body>
     <header id="main-header">
         <div class="container">
             <h1><i class="fas fa-laptop"></i>
             Online Resume</h1>
-            <h2><i class="fas fa-user-graduate"></i> Bea Caballero  
+            <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero Martin
             </h2>
           
         </div>
