--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Online Resume</title>
+    <title>Bea Caballero | Online Resume</title>
 </head>
 <body>
     <header id="main-header">
         <div class="container">
             <h1><i class="fas fa-laptop"></i>
-            Online Resume</h1>
+            Bea Caballero | Online Resume</h1>
             <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero Martin
             </h2>
           
