--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="main-header">
         <div class="container">
             <h1><i class="fas fa-laptop"></i>
-            Bea Caballero | Online Resume</h1>
+           Online Resume</h1>
             <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero Martin
             </h2>
           
