--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
         <ul>
             <li>
                 <div>
+                    <h3><i class="fas fa-chevron-right"></i> Microsoft Office 365</h3>
+                </div>
+            </li>
+            <li>
+                <div>
                     <h3><i class="fas fa-chevron-right"></i> HTML5 and CSS3</h3>
                 </div>
             </li>
@@ -131,8 +136,28 @@
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i> Blackboard</h3>
+                    <h3><i class="fas fa-chevron-right"></i> Articulate 360</h3>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i> Wireframe Tools (Sketch, Adobe Xd)</h3>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i> Camtasia</h3>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i>VLEs (Blackboard, Moodle)</h3>
                 
+                </div>
+            </li>
+            <li>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i> Lecture Recording Systems (Panopto)</h3>
                 </div>
             </li>
             <li>
