--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Bea Caballero | Online Resume</title>
@@ -151,7 +152,7 @@
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>VLEs (Blackboard, Moodle)</h3>
+                    <h3><i class="fas fa-chevron-right"></i> VLEs (Blackboard, Moodle)</h3>
                 
                 </div>
             </li>
