--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1><i class="fas fa-laptop"></i>
            Online Resume</h1>
-            <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero Martin
+            <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero
             </h2>
           
         </div>
@@ -22,9 +22,17 @@
     <section id="timeline" class="work-experience">
         <h2><i class="fas fa-briefcase"></i> Work Experience</h2>
         <ul>
+             <li>
+                <div>
+                    <h3><i class="fas fa-chevron-right"></i> 2024 - Date: Digital Learning Developer</h3>
+                    <span>The Tavistock and Portnman NHS Foundation Trust</span>
+                    <p>iProviding guidance on effective digital teaching methods and establishing criteria for evaluating learner performance. 
+                        Collaborating with SMEs to develop and design creative and captivating digital learning activities. </p>
+                </div>
+            </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i> 2018 - Date: Learning Technologist</h3>
+                    <h3><i class="fas fa-chevron-right"></i> 2018 - 2023: Learning Technologist</h3>
                     <span>Imperial College London</span>
                     <p>Designing and building responsive websites (using HTML5, CSS3, JavaScript) and reusable templates (i.e. Blackboard). Providing technical expertise and training to other staff members in a variety of online platforms and tools.</p>
                 </div>
@@ -132,17 +140,17 @@
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i> Adobe Photoshop</h3>
+                    <h3><i class="fas fa-chevron-right"></i> Adobe Creative Cloud (Photoshop, Adobe Express)</h3>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i> Articulate 360</h3>
+                    <h3><i class="fas fa-chevron-right"></i> Articulate Rise 360</h3>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i> Wireframe Tools (Sketch, Adobe Xd)</h3>
+                    <h3><i class="fas fa-chevron-right"></i> Wireframe Tools (Sketch, Adobe XD)</h3>
                 </div>
             </li>
             <li>
