--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1><i class="fas fa-laptop"></i>
            Online Resume</h1>
-            <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero Martin
+            <h2><i class="fas fa-user-graduate"></i> Dr Beatriz Caballero
             </h2>
           
         </div>
