--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i> 2018 - Date: Learning Technologist</h3>
+                    <h3><i class="fas fa-chevron-right"></i> 2018 - 2023: Learning Technologist</h3>
                     <span>Imperial College London</span>
                     <p>Designing and building responsive websites (using HTML5, CSS3, JavaScript) and reusable templates (i.e. Blackboard). Providing technical expertise and training to other staff members in a variety of online platforms and tools.</p>
                 </div>
